# rust-symcrypt

./: .gitignore  .gitmodules  Cargo.toml  tree.txt
.github/workflows/: bindgen.yml  linelint.yml  rust.yml
jitterentropy-sys2/: Cargo.toml
jitterentropy-sys2/scripts/: bindings.ps1
jitterentropy-sys2/src/: bindings.rs  lib.rs
rust-symcrypt/: Cargo.toml
rust-symcrypt/src/: chacha.rs  ecdh.rs  eckey.rs  gcm.rs  hash.rs  hmac.rs  lib.rs
rust-symcrypt/src/ecc/: ecdh.rs  ecdsa.rs  mod.rs
rust-symcrypt/src/rsa/: mod.rs  oaep.rs  pkcs1.rs  pss.rs
rust-symcrypt/tests/: random.rs
scripts/: generate-all-bindings.ps1  generate-bindings.ps1  get-cl-path.ps1  install-bindgen.ps1  process-cppasm.ps1  process-symcryptasm.ps1  update-upstream.ps1
symcrypt-bindgen/: Cargo.toml  build.rs
symcrypt-sys/: Cargo.toml  README.md  build.rs
symcrypt-sys/src/: bindings.rs  lib.rs  symcrypt_bindings.rs
symcrypt-sys/src/bindings/: aarch64_pc_windows_msvc.rs  aarch64_unknown_linux_gnu.rs  x86_64_pc_windows_msvc.rs  x86_64_unknown_linux_gnu.rs
symcrypt-sys/upstream/: VERSION
symcrypt-sys/upstream/inc/: buildInfo.h  symcrypt.h  symcrypt_internal.h  symcrypt_internal_shared.inc  symcrypt_low_level.h
symcrypt-sys/upstream/lib/: 3des.c  IEEE802_11SaeCustom.c  aes-asm.c  aes-c.c  aes-default.c  aes-key.c  aes-xmm.c  chacha20.c  cpuid.c  cpuid_notry.c  cpuid_um.c  dh.c  dlgroup.c  dlkey.c  ec_dispatch.c  ec_dsa.c  ec_internal_curves.c  ec_mul.c  eckey.c  ecurve.c  env_generic.c  env_windowsBootLib.c  env_windowsKernelModeWin7.c  env_windowsKernelModeWin8_1.c  env_windowsUserModeWin7.c  env_windowsUserModeWin8_1.c  fdef_general.c  fdef_mod.c  gen_int.c  ghash.c  hmac.c  hmacsha3_256.c  hmacsha3_384.c  hmacsha3_512.c  libmain.c  modexp.c  parhash.c  poly1305.c  precomp.h  rsa_padding.c  (+15 more)
symcrypt-sys/upstream/lib/amd64/: sha256xmm_asm.symcryptasmexp  sha256ymm_asm.symcryptasmexp  sha512ymm_asm.symcryptasmexp  sha512ymm_avx512vl_asm.symcryptasmexp
symcrypt-sys/upstream/lib/arm/: fdef_asm.asm
symcrypt-sys/upstream/lib/arm64/: symcrypt_name_mangling.inc
symcrypt-sys/upstream/lib/asm/aarch64-pc-windows-msvc/: fdef369_asm.asm  fdef_asm.asm  wipe.asm
symcrypt-sys/upstream/lib/asm/aarch64-unknown-linux-gnu/: fdef369_asm-gas.asm  fdef_asm-gas.asm  wipe-gas.asm
symcrypt-sys/upstream/lib/asm/x86_64-pc-windows-msvc/: aesasm.asm  fdef369_asm.asm  fdef_asm.asm  fdef_mulx.asm  sha256xmm_asm.asm  sha256ymm_asm.asm  sha2common_asm.asm  sha512ymm_asm.asm  sha512ymm_avx512vl_asm.asm  wipe.asm
symcrypt-sys/upstream/lib/asm/x86_64-unknown-linux-gnu/: aesasm-gas.asm  fdef369_asm-gas.asm  fdef_asm-gas.asm  fdef_mulx-gas.asm  sha256xmm_asm-gas.asm  sha256ymm_asm-gas.asm  sha2common_asm-gas.asm  sha512ymm_asm-gas.asm  sha512ymm_avx512vl_asm-gas.asm  wipe-gas.asm
symcrypt-sys/upstream/lib/i386/: wipe.asm
symcrypt-sys/upstream/lib/linux/: intrinsics.c
symcrypt-sys/upstream/modules/: statusindicator_common.h
test-symcrypt/: Cargo.toml
test-symcrypt/src/: main.rs
