[package]
name = "symcrypt-sys"
authors = ["Microsoft"]
version = "0.8.0"
license = "MIT OR Apache-2.0"
description = "Rust/C Bindings for SymCrypt"
edition = "2021"
build = "build.rs"
homepage = "https://github.com/microsoft/SymCrypt"
repository = "https://github.com/microsoft/rust-symcrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dynamic = []

[dependencies]
libc = "0.2.0"

[build-dependencies]
#cc = { version = "1.2.4", features = ["parallel"] }
cc = { version = "1.2.4" }