[package]
name = "symcrypt-sys"
authors = ["Microsoft"]
version = "0.4.0"
license = "MIT OR Apache-2.0"
description = "Rust/C Bindings for SymCrypt"
edition = "2021"
build = "build/main.rs"
homepage = "https://github.com/microsoft/SymCrypt"
repository = "https://github.com/microsoft/rust-symcrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["static"]
static = ["dep:jitterentropy-sys2"]
dynamic = []

[dependencies]
libc = "0.2.0"

[target.'cfg(os = "linux")'.dependencies]
jitterentropy-sys2 = { version = "0.1", git = "https://github.com/Vaiz/rust-symcrypt.git", branch = "jitterentropy", optional = true}

[build-dependencies]
#cc = { version = "1.2.4", features = ["parallel"] }
cc = { version = "1.2.7" }